# rpi-sysinfo-display-rust

./: Cargo.toml  Makefile.toml  README.md  build.rs  oledctl.cronfile
src/: main.rs  sysinfo.rs
