[package]
name = "rpi-sysinfo-display"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
ssd1306 = "0.8.0"
linux-embedded-hal = "0.3.2"
embedded-graphics = "0.8.0"
local_ipaddress = "0.1.3"
chrono = "0.4.26"
execute = "0.2.12"
scan_fmt = "0.2.6"
