[package]
name = "rpi-sysinfo-display"
version = "0.5.1"
edition = "2021"
description = "0.96 inch oled driver for OPENWRT Raspberry Pi"
keywords = ["i2c", "driver", "ssd1306", "rpi", "openwrt"]
repository = "github.com/sndnvaps/rpi-sysinfo-display-rust"
authors = ["Samuel Freeman <admin@sndnvaps.com>"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
ssd1306 = "0.8.0"
linux-embedded-hal = "0.3.2"
embedded-graphics = "0.8.0"
local_ipaddress = "0.1.3"
chrono = "0.4.26"
execute = "0.2.12"
scan_fmt = "0.2.6"
cfg-if = "1.0.0"

[build-dependencies.version_check]
version = "0.9"


[features]
default = ["raspberrypi"]
raspberrypi = []
linux = []
